Реализован вывод постов

--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -8,7 +8,13 @@
 
 
     <body>
-        HELLO!
+        HELLO_2!
+
+        {% for post in posts %}
+            <h1>{{ post.title }}</h1>
+            <p>{{ post.text }}</p>
+        {% endfor %}
+
     </body>
 
 </html>
