--- a/cloud/templates/cloud/main_template.html
+++ b/cloud/templates/cloud/main_template.html
@@ -18,7 +18,9 @@
 
 
     <body>
-
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu">Новый пост!</a>
+        {% endif %}
 
         {% block content %}
         {% endblock %}
