--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -3,6 +3,9 @@
 {% block content %}
 
     Post_detail!
+    {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Редактировать пост</a>
+    {% endif %}
 
         <h1> {{ post.title }}</h1>
         <p>{{ post.text }}</p>
