--- a/cloud/static/css/menu.css
+++ b/cloud/static/css/menu.css
@@ -18,6 +18,12 @@ body,html{
       margin-left: 15px;
   }
 
+  #avatar{
+      border-radius: 100%;
+      width: 100%;
+      padding: 20px;
+  }
+
  @media (min-width: 765px) {
 
     .main{
