--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -1,4 +1,8 @@
-{% extends 'cloud/main_template.html' %}
+{% extends 'main_template.html' %}
+
+{% block newpost_active%}
+    class="active"
+{% endblock %}
 
 {% block content %}
 
