--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -36,24 +36,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a id="menu-brand" class="navbar-brand" href="/"><img src="{% static 'img/piLogo.png' %}" alt="logo"></a>
+                  <a id="menu-brand" class="navbar-brand" href="{% url 'post_list' %}"><img src="{% static 'img/piLogo.png' %}" alt="logo"></a>
                 </div>
+
                 <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Облако<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cloud"></span></a></li>
-                    <li ><a href="/">Поиск<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-search"></span></a></li>
+                    <img id="avatar" src="{% static 'img/default_avatar.png' %}" alt="avatar"/>
+                    {% if user.is_authenticated %}
+                            <a href="{% url 'signout' %}"><div class="btn btn-danger" style="width: 100%">Выйти</div></a>
+                    {% else %}
+                            <a href="{% url 'signup' %}"><div class="btn btn-success" style="width: 60%">Регистрация</div></a>
+                            <a href="{% url 'signin' %}"><div class="btn btn-primary" style="width: 40%">Войти</div></a>
+                    {% endif %}
+                    <li {% block cloud_active %}{% endblock %}>
+                        <a href="{% url 'post_list' %}">Облако<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cloud"></span></a>
+                    </li>
+                    <li {% block search_active %}{% endblock %}>
+                        <a href="{% url 'search' %}">Поиск<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-search"></span></a>
+                    </li>
                       {% if user.is_authenticated %}
-                         <li ><a href="{% url 'post_new' %}">Запостить<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-upload"></span></a></li>
+                         <li {% block newpost_active %}{% endblock %}>
+                             <a href="{% url 'post_new' %}">Запостить<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-upload"></span></a>
+                         </li>
                       {% endif %}
-                    <li ><a href="/">Мемесы<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-fire"></span></a></li>
+                    <li {% block memes_active %}{% endblock %}>
+                        <a href="{% url 'memes' %}">Мемесы<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-fire"></span></a>
+                    </li>
                   </ul>
                 </div>
           </div>
         </nav>
 
 
-        {% block content %}
-        {% endblock %}
+        <div class="content-block">
+            {% block content %}
+            {% endblock %}
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
