--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block signin_active%}
+    class="active"
+{% endblock %}
+
 {% block content %}
     Вход!
 {% endblock %}
