--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block signup_active%}
+    class="active"
+{% endblock %}
+
 {% block content %}
     Регистрация!
 {% endblock %}
