--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -17,10 +17,10 @@
         <link rel="stylesheet" href="{% static 'css/global.css' %}">
         <link rel="stylesheet" href="{% static 'css/menu.css' %}">
 
-            {% block style_links %}
-            {% endblock %}
-
         <link rel="icon" href="{% static 'img/favicon.ico' %}">
+
+        {% block head %}
+        {% endblock %}
 
     </head>
 
@@ -46,10 +46,10 @@
                             <h3>{{ user.username }}</h3>
                         {% else %}
                             <li {% block signup_active %}{% endblock %} style="background-color: #CCFFCC">
-                                <a href="{% url 'signup' %}">Регистрация<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-pencil"></span></a>
+                                <a href="{% url 'sign_up' %}">Регистрация<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-pencil"></span></a>
                             </li>
                             <li {% block signin_active %}{% endblock %} style="background-color: #CCFFFF">
-                                <a href="{% url 'signin' %}">Войти<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-in"></span></a>
+                                <a href="{% url 'sign_in' %}">Войти<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-in"></span></a>
                             </li>
                         {% endif %}
                         <li {% block cloud_active %}{% endblock %}>
@@ -68,7 +68,7 @@
                         </li>
                             {% if user.is_authenticated %}
                                 <li style="background-color: #FFCCCC">
-                                    <a href="{% url 'signout' %}">Выйти<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span></a>
+                                    <a href="{% url 'sign_out' %}">Выйти<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span></a>
                                 </li>
                             {% endif %}
                     </ul>
@@ -82,6 +82,9 @@
             {% endblock %}
         </div>
 
+
+        {% block scripts %}
+        {% endblock %}
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
                 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
