--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -6,12 +6,22 @@
 
 {% block content %}
 
-    Post_detail!
-    {% if user.is_authenticated %}
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Редактировать пост</a>
-    {% endif %}
+    <div class="container-fluid" style="margin: 0; padding: 0;">
+        <div class="col-md-3 col-lg-3"></div>
+        <div class="col-md-6 col-lg-6">
+            <div class="post-panel" style="padding: 30px">
+                <h1> {{ post.title }}</h1>
+                <p>{{ post.text }}</p> <br>
+                {% if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Редактировать пост</a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-3"></div>
+    </div>
 
-        <h1> {{ post.title }}</h1>
-        <p>{{ post.text }}</p>
+
+
+
 
 {% endblock %}
