--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="{% static 'css/global.css' %}">
         <link rel="stylesheet" href="{% static 'css/menu.css' %}">
 
-        <link rel="icon" href="{% static 'img/favicon.ico' %}">
+        <link rel="icon" href="{% static 'img/favicon.png' %}">
 
         {% block head %}
         {% endblock %}
