--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Cloud</title>
+        <title>{% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Latest compiled and minified CSS -->
@@ -85,10 +85,6 @@
             {% block content %}
             {% endblock %}
         </div>
-
-
-        {% block scripts %}
-        {% endblock %}
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
                 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
