--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -7,24 +7,32 @@
 {% block content %}
 
         <div class="container-fluid" style="margin: 0; padding: 0;">
-            {% for feed in feeds %}
 
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                    <div class="post-panel">
-                        <div class="mem-title container-fluid">
-                            <a href="{{ feed.link }}"> <h3>{{ feed.author }}</h3> </a>
-                            <h5 style="color: #9e9e9e">{{ feed.published }}</h5>
-                        </div>
+        {% for col_feed in colomns_feed%}
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 
-                        <hr>
+                    <table>
+                        {% for feed in col_feed %}
+                            <tr>
+                                <td>
+                                    <div class="post-panel">
+                                        <div class="mem-title container-fluid">
+                                            <a href="{{ feed.link }}"> <h3>{{ feed.author }}</h3> </a>
+                                            <h5 style="color: #9e9e9e">{{ feed.published }}</h5>
+                                        </div>
+                                        <hr>
+                                        <div class="mem-content">
+                                            {{ feed.summary|safe }}
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
 
-                        <div class="mem-content">
-                            {{ feed.summary|safe }}
-                        </div>
-                    </div>
-                </div>
+            </div>
+        {% endfor %}
 
-            {% endfor %}
         </div>
 
 
