Добавлены заголовки страниц

--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Пост
+{% endblock %}
+
 {% block cloud_active%}
     class="active"
 {% endblock %}
