--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Редактирование
+{% endblock %}
+
 {% block newpost_active%}
     class="active"
 {% endblock %}
