--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Мемесы
+{% endblock %}
+
 {% block memes_active%}
     class="active"
 {% endblock %}
