--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Поиск
+{% endblock %}
+
 {% block search_active%}
     class="active"
 {% endblock %}
