--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Настройки
+{% endblock %}
+
 {% block settings_active%}
     class="active"
 {% endblock %}
