--- a/cloud/templates/auth/sign_in.html
+++ b/cloud/templates/auth/sign_in.html
@@ -1,5 +1,9 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Вход
+{% endblock %}
+
 {% block signin_active%}
     class="active"
 {% endblock %}
