--- a/cloud/templates/auth/sign_up.html
+++ b/cloud/templates/auth/sign_up.html
@@ -1,5 +1,8 @@
 {% extends 'main_template.html' %}
 
+{% block title %}
+    Cloud Регистрация
+{% endblock %}
 
 {% block signup_active%}
     class="active"
