Реализованы настройки пользователя, поправлен шаблон поста

--- a/cloud/templates/auth/sign_in.html
+++ b/cloud/templates/auth/sign_in.html
@@ -28,6 +28,11 @@
                 {% if error %} <p>{{ error }}</p> {% endif %}
             </div>
 
+            {# TODO реализовать восстановление пароля #}
+            <div class="form-group" style="text-align: left">
+                <a href="#" ><label>Восстановить пароль</label></a>
+            </div>
+
             <div class="form-group">
                 <input class="btn btn-default col-xs-12" type="submit" value="Войти"/>
             </div>
