--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -2,15 +2,34 @@ body{
     background-color: aliceblue;
 }
 
+.no-margin-padding{
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
 .content-block{
     text-align: center;
     vertical-align: middle;
+    margin-top: 20px;
 }
 
 .error{
     text-align: center;
     color: crimson;
     font-weight: bold;
+}
+
+.avatar-settings{
+    border-radius: 100%;
+    width: 100%;
+    max-width: 250px;
+}
+
+.panel-settings{
+    padding: 10px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .sign-form{
@@ -33,6 +52,25 @@ body{
     text-align: center;
     min-height: 150px;
     margin-bottom: 20px;
+}
+
+.django-control input, select, textarea{
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 .post-panel img{
