--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -14,8 +14,13 @@
             <div class="col-md-3 col-lg-3"></div>
             <div class="col-md-6 col-lg-6">
                 <div class="post-panel" style="padding: 30px">
-                    <form method="POST">{% csrf_token %}
-                        {{ form.as_p }}
+                    <form method="POST">
+                        {% csrf_token %}
+
+                        <div class="django-control">
+                            {{ form.as_p }}
+                        </div>
+
                         <div class="container-fluid">
                             <button type="submit" class="save btn btn-default col-xs-12 col-sm-12 col-md-12 col-lg-12">Сохранить</button>
                         </div>
