--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -10,12 +10,29 @@
 
 {% block content %}
 
-    <div class="container-fluid" style="margin: 0; padding: 0;">
+    <div class="container-fluid no-margin-padding">
         {% for post in posts %}
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                 <div class="post-panel">
-                    <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a></h1>
+                    <hr>
+                    <h3>
+                        <a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a>
+                    </h3>
                     <p>{{ post.text }}</p>
+                    <table class="table">
+                        <tr>
+                            <td>{{ post.subject.program.chair.department.university.short_title}}</td>
+                            <td>{{ post.subject.program.chair.department.short_title}}</td>
+                            <td>{{ post.subject.program.chair.short_title}}</td>
+                            <td>{{ post.subject.program.title }}</td>
+                        </tr>
+                        <tr>
+                            <td>{{ post.subject.short_title }}</td>
+                            <td>{{ post.author }}</td>
+                            <td>{{ post.type.title }}</td>
+                            <td>{{ post.created_date }}</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         {% endfor %}
