--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -1,4 +1,5 @@
 {% extends 'main_template.html' %}
+{% load staticfiles %}
 
 {% block title %}
     Cloud Настройки
@@ -10,14 +11,77 @@
 
 {% block content %}
 
-        здесь будут настройки пользователя!
 
-        <br>
+    <div class="container-fluid no-margin-padding">
 
-        <a href="{% url 'sign_out' %}">
-            <div class="btn btn-warning">
-                Выйти!
+            <div class="post-panel panel-settings">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                        {% if user_info.avatar %}
+                            <img class="avatar-settings" src="/static/{{ user_info.avatar }}" alt="avatar" style="width: 100%">
+                        {% else %}
+                            <img class="avatar-settings" id="avatar" src="{% static 'img/default_avatar.png' %}" alt="avatar" style="width: 100%">
+                        {% endif %}
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7" style="text-align: left">
+                        <table class="table">
+                            <tr><th scope="row">Логин:</th><td>{{ user.username }}</td></tr>
+                            <tr><th scope="row">Почта:</th><td>{{ user.email }}</td></tr>
+                            <tr><th scope="row">Имя:</th><td>{{ user.first_name }}</td></tr>
+                            <tr><th scope="row">Фамилия:</th><td>{{ user.last_name }}</td></tr>
+                            <tr><th scope="row">Карма:</th><td>{{ user_info.karma }}</td></tr>
+                            <tr><th scope="row">Статус:</th><td>{{ user_status.title }}</td></tr>
+                        </table>
+                    </div>
+                </div>
+
+                <hr>
+                <label>Образование</label>
+                <div class="container-fluid">
+                    <table class="table" style="text-align: left">
+                        <tr><th scope="row">Университет:</th><td>{{ university.title }}</td></tr>
+                        <tr><th scope="row">Факультет:</th><td>{{ department.title }}</td></tr>
+                        <tr><th scope="row">Кафедра:</th><td>{{ chair.title }}</td></tr>
+                        <tr><th scope="row">Специальность:</th><td>{{ program.title }}</td></tr>
+                    </table>
+                </div>
+
+                <hr>
+                <label>Изменить пароль</label>
+                <div class="container-fluid">
+                    <form action="{% url "change_password" %}" method="post">
+                        {% csrf_token %}
+
+                        <table class="table" style="text-align: left">
+                            <tr>
+                                <th scope="row">Текущий пароль:</th>
+                                <td>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Новый пароль:</th>
+                                <td>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Повторите пароль:</th>
+                                <td>
+
+                                </td>
+                            </tr>
+                        </table>
+
+                        <button class="btn btn-primary" type="submit">Изменить пароль</button>
+                    </form>
+
+                </div>
+
+                <hr>
+                <a href="{% url 'sign_out' %}"> <div class="btn btn-warning">Выйти!</div></a>
             </div>
-        </a>
 
+
+    </div>
 {% endblock %}
