--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -44,7 +44,7 @@
                         {% if user.is_authenticated %}
                             <li {% block settings_active %}{% endblock %}>
                                 <a href="{% url 'settings' %}">
-                                    <img id="avatar" src="{% static 'img/default_avatar.png' %}" alt="avatar"/>
+                                    <img id="avatar" src="{{ request.session.user_ava_url }}" alt="avatar"/>
                                     <h3 style="margin: 0;">{{ user.username }}</h3>
                                 </a>
                             </li>
