--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -17,11 +17,7 @@
             <div class="post-panel panel-settings">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                        {% if user_info.avatar %}
-                            <img class="avatar-settings" src="/static/{{ user_info.avatar }}" alt="avatar" style="width: 100%">
-                        {% else %}
-                            <img class="avatar-settings" id="avatar" src="{% static 'img/default_avatar.png' %}" alt="avatar" style="width: 100%">
-                        {% endif %}
+                        <img class="avatar-settings" src="{{ user_info.avatar.url }}" alt="avatar" style="width: 100%">
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7" style="text-align: left">
                         <table class="table">
@@ -30,7 +26,7 @@
                             <tr><th scope="row">Имя:</th><td>{{ user.first_name }}</td></tr>
                             <tr><th scope="row">Фамилия:</th><td>{{ user.last_name }}</td></tr>
                             <tr><th scope="row">Карма:</th><td>{{ user_info.karma }}</td></tr>
-                            <tr><th scope="row">Статус:</th><td>{{ user_status.title }}</td></tr>
+                            <tr><th scope="row">Статус:</th><td>{{ user_info.status.title }}</td></tr>
                         </table>
                     </div>
                 </div>
@@ -39,10 +35,10 @@
                 <label>Образование</label>
                 <div class="container-fluid">
                     <table class="table" style="text-align: left">
-                        <tr><th scope="row">Университет:</th><td>{{ university.title }}</td></tr>
-                        <tr><th scope="row">Факультет:</th><td>{{ department.title }}</td></tr>
-                        <tr><th scope="row">Кафедра:</th><td>{{ chair.title }}</td></tr>
-                        <tr><th scope="row">Специальность:</th><td>{{ program.title }}</td></tr>
+                        <tr><th scope="row">Университет:</th><td>{{ user_info.program.chair.department.university.title }}</td></tr>
+                        <tr><th scope="row">Факультет:</th><td>{{ user_info.program.chair.department.title }}</td></tr>
+                        <tr><th scope="row">Кафедра:</th><td>{{ user_info.program.chair.title }}</td></tr>
+                        <tr><th scope="row">Специальность:</th><td>{{ user_info.program.title }}</td></tr>
                     </table>
                 </div>
 
