Отредактирована страница с подробными данными о посте

--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -26,7 +26,7 @@
                            <a href="{{ post.link }}"><div class="btn btn-default">Прикреплённая ссылка</div></a>
                         {% endif %}
                         {% if post.file %}
-                            <a href="{{ post.file.url }}"><div class="btn btn-info">Прикреплённый файл</div></a>
+                            <a href="{{ post.file.url }}"><div class="btn btn-default">Прикреплённый файл</div></a>
                         {% endif %}
                     <table class="table">
                         <tr>
