--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -10,14 +10,73 @@
 
 {% block content %}
 
-    <div class="container-fluid" style="margin: 0; padding: 0;">
+    <div class="container-fluid no-margin-padding">
         <div class="col-md-3 col-lg-3"></div>
         <div class="col-md-6 col-lg-6">
             <div class="post-panel" style="padding: 30px">
-                <h1> {{ post.title }}</h1>
-                <p>{{ post.text }}</p> <br>
-                {% if user.is_authenticated %}
-                    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Редактировать пост</a>
+                <h2> {{ post.title }}</h2>
+                <hr>
+                <p>{{ post.text }}</p>
+
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" class="post-image">
+                {% endif %}
+
+                <br><br>
+                {% if post.link %}
+                    <a href="{{ post.link }}">
+                        <div class="btn btn-info" style="width:100%">Прикреплённая ссылка</div>
+                    </a>
+                {% endif %}
+                <br><br>
+                {% if post.file %}
+                    <a href="{{ post.file.url }}">
+                        <div class="btn btn-success" style="width:100%">Прикреплённый файл</div>
+                    </a>
+                {% endif %}
+                <br><br>
+
+                <table class="table" style="text-align: left">
+                    <tr>
+                        <th>Предмет:</th>
+                        <td>{{ post.subject.title }}</td>
+                    </tr>
+                    <tr>
+                        <th>Автор:</th>
+                        <td>{{ post.author }}</td>
+                    </tr>
+                    <tr>
+                        <th>Тип:</th>
+                        <td>{{ post.type.title }}</td>
+                    </tr>
+                    <tr>
+                        <th>Дата публикации:</th>
+                        <td>{{ post.created_date }}</td>
+                    </tr>
+                    <tr>
+                        <th>Университет:</th>
+                        <td>{{ post.subject.program.chair.department.university.title}}</td>
+                    </tr>
+                    <tr>
+                        <th>Факультет:</th>
+                        <td>{{ post.subject.program.chair.department.title}}</td>
+                    </tr>
+                    <tr>
+                        <th>Кафедра:</th>
+                        <td>{{ post.subject.program.chair.title}}</td>
+                    </tr>
+                    <tr>
+                        <th>Программа:</th>
+                        <td>{{ post.subject.program.title }}</td>
+                    </tr>
+                    </table>
+
+                {% if user == post.author or post.author.is_staff or post.author.is_superuser %}
+                    <a href="{% url 'post_edit' pk=post.pk %}">
+                        <div class="btn btn-warning" style="width:100%">
+                            Редактировать пост
+                        </div>
+                    </a>
                 {% endif %}
             </div>
         </div>
