--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -10,12 +10,12 @@
 
 {% block content %}
 
-        <div class="container-fluid" style="margin: 0; padding: 0;">
+        <div class="container-fluid no-margin-padding">
 
         {% for col_feed in colomns_feed%}
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 
-                    <table>
+                    <table width="100%">
                         {% for feed in col_feed %}
                             <tr>
                                 <td>
