--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -14,7 +14,7 @@
             <div class="col-md-3 col-lg-3"></div>
             <div class="col-md-6 col-lg-6">
                 <div class="post-panel" style="padding: 30px">
-                    <form method="POST">
+                    <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
 
                         <div class="django-control">
