--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -51,25 +51,27 @@
                         <table class="table" style="text-align: left">
                             <tr>
                                 <th scope="row">Текущий пароль:</th>
-                                <td>
-
+                                <td class="django-control">
+                                    {{ change_password_form.old_password }}
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">Новый пароль:</th>
-                                <td>
-
+                                <td class="django-control">
+                                    {{ change_password_form.new_password1 }}
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">Повторите пароль:</th>
-                                <td>
-
+                                <td class="django-control">
+                                    {{ change_password_form.new_password2 }}
                                 </td>
                             </tr>
                         </table>
-
+                        
                         <button class="btn btn-primary" type="submit">Изменить пароль</button>
+                        <label class="text-info">{{ message }}</label><br>
+
                     </form>
 
                 </div>
