--- a/cloud/templates/auth/sign_up.html
+++ b/cloud/templates/auth/sign_up.html
@@ -19,8 +19,8 @@
             <div class="col-xs-12 col-sm-12 col-md-1 col-lg-2"></div>
 
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
-             {# TODO  разобраться с высотой гребаного блока и убрать инлайн стиль#}
-                <div class="sign-form" style="height: 370px;">
+
+                <div class="container-fluid sign-form">
 
                     <div class="form-group">
                       <label for="email" class="col-form-label">Почта<b style="color: crimson">*</b></label>
@@ -66,7 +66,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
-                <div class="sign-form">
+                <div class="container-fluid sign-form">
                     <label>
                         Вы можете заполнить дополнительную информацию о себе,
                         которая будет использована для персонализации контента
