--- a/cloud/templates/universities.html
+++ b/cloud/templates/universities.html
@@ -14,10 +14,18 @@
 
 
         {% for univer in univer_list %}
-             <div class="post-panel universities">
-                <img class="univer-logo" src="{{ univer.logo.url }}" alt="logo">
-                {{ univer.title }}
-             </div>
+
+                <div class="post-panel universities container-fluid">
+                    <a href="#">
+                        <div class="col-xs-5 col-sm-3 col-md-3 col-lg-3">
+                            <img class="univer-logo" src="{{ univer.logo.url }}" alt="logo">
+                        </div>
+                        <div class="col-xs-7 col-sm-9 col-md-9 col-lg-9">
+                            <h3>{{ univer.title }}</h3>
+                        </div>
+                    </a>
+                </div>
+
         {% endfor %}
 
      </div>
