Добавлено поле "курс" в информация о пользователе

--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -39,6 +39,7 @@
                         <tr><th scope="row">Факультет:</th><td>{{ user_info.program.chair.department.title }}</td></tr>
                         <tr><th scope="row">Кафедра:</th><td>{{ user_info.program.chair.title }}</td></tr>
                         <tr><th scope="row">Специальность:</th><td>{{ user_info.program.title }}</td></tr>
+                        <tr><th scope="row">Курс:</th><td>{{ user_info.course }}</td></tr>
                     </table>
                 </div>
 
