--- a/cloud/templates/auth/sign_up.html
+++ b/cloud/templates/auth/sign_up.html
@@ -94,6 +94,11 @@
                     </div>
 
                     <div class="form-group django-control">
+                        <label class="col-form-label">Курс обучения</label>
+                        {{ user_info_form.course }}
+                    </div>
+
+                    <div class="form-group django-control">
                         <label class="col-form-label">Аватар</label>
                         {{ user_info_form.avatar }}
                     </div>
